Added WHO IS16 values

--- a/R/report.Rmd
+++ b/R/report.Rmd
@@ -30,8 +30,8 @@ library(nlme)
 source(paste0(root, '/R/helper functions.R'))
 
 # input file
-# https://abcs-amp.cancer.gov/uploads/external/314/ddb07dfa20e8759daee040707401e7d11c621ad3
-f <- paste0(root, '/data/HSL_VAL_HPV18VLP_Summary_V3.xlsx')
+# https://abcs-amp.cancer.gov/uploads/external/316/cd64051437525a8347b21bd37af151656ace9db6
+f <- paste0(root, '/data/HSL_VAL_HPV18VLP_Summary_V3.1.xlsx')
 
 # pre-validation results to use for accuracy
 # not used
@@ -56,7 +56,8 @@ diff <- list(lloq_acon = 'Result', #'Result (Calculated Con.)',
              spec_assay = 'HPV_Type',
              spec_acon = 'Calculated Titer (EU/mL)', #'Calculated Result (EU/mL)',
              acc_sheet = 'Accuracy', #'ACCURACY',
-             acc_acon = 'Calculated Result (EU/mL)', #'Result ((AU/mL))',
+             acc_theo = 'Theoretical Result (IU/mL)',
+             acc_acon = 'Experimental Result (IU/mL)', #'Calculated Result (EU/mL)', #'Result ((AU/mL))',
              acc_assay = 'HPV_Type', #'Assay',
              prec_sheet = 'Precision', #'PRECISION',
              prec_acon = 'Calculated Result (EU/mL)', #'Result ((AU/mL))',
